Name:               tog
Version:            0.5
Description:        Simple command line time tracking utility.
License:            BSD2
License-file:       LICENSE
Author:             Libor Wagner
Maintainer:         liborwagner@centrum.cz
Build-Type:         Simple
Cabal-Version:      >=1.2

Executable tog
    Main-is:        Tog.hs
    Build-Depends:  base >= 3,directory, time, process, ansi-wl-pprint
